--- a/ChartDesigner/MainWindow.xaml
+++ b/ChartDesigner/MainWindow.xaml
@@ -17,7 +17,7 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="40" />
         </Grid.ColumnDefinitions>
 
         <Viewbox
@@ -33,25 +33,60 @@
                 />
         </Viewbox>
 
-        <Slider
+        <Grid
             Grid.Row="1"
             Grid.Column="0"
-            Minimum="100"
-            Value="800"
-            Maximum="1000"
-            Orientation="Horizontal"
-            x:Name="HorizontalSlider"
-            />
+            Grid.ColumnSpan="2"
+            Margin="5"
+            >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"    />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
 
-        <Slider
+            <Slider
+                Minimum="100"
+                Value="800"
+                Maximum="1000"
+                Orientation="Horizontal"
+                x:Name="HorizontalSlider"
+                />
+
+            <TextBlock
+                Grid.Column="1"
+                Text="{Binding ElementName=HorizontalSlider, Path=Value, StringFormat=####}"
+                FontWeight="Bold"
+                FontSize="14"
+                HorizontalAlignment="Right"
+                />
+        </Grid>
+
+        <Grid
             Grid.Row="0"
             Grid.Column="1"
-            Minimum="100"
-            Value="600"
-            Maximum="1000"
-            Orientation="Vertical"
-            x:Name="VerticalSlider"
+            Margin="5"
+            >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*"    />
+            </Grid.RowDefinitions>
 
+            <TextBlock
+                Text="{Binding ElementName=VerticalSlider, Path=Value, StringFormat=####}"
+                FontWeight="Bold"
+                FontSize="14"
+                HorizontalAlignment="Right"
+                />
+
+            <Slider
+                Grid.Row="1"
+                Minimum="100"
+                Value="600"
+                Maximum="1000"
+                Orientation="Vertical"
+                x:Name="VerticalSlider"
+                HorizontalAlignment="Right"
             />
+        </Grid>
     </Grid>
 </Window>
