--- a/ChartDesigner/MainWindow.xaml
+++ b/ChartDesigner/MainWindow.xaml
@@ -1,9 +1,10 @@
-﻿<Window
+﻿<mahapps:MetroWindow
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:oxyplot="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf"
+    xmlns:mahapps="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     mc:Ignorable="d"
 	Title="Chart designer"
     MinWidth="200"
@@ -89,4 +90,4 @@
             />
         </Grid>
     </Grid>
-</Window>
+</mahapps:MetroWindow>
