--- a/ChartDesigner/MainWindow.xaml
+++ b/ChartDesigner/MainWindow.xaml
@@ -6,7 +6,7 @@
     xmlns:oxyplot="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf"
     xmlns:mahapps="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     mc:Ignorable="d"
-	Title="{Binding Title}"
+	Title="{Binding ProgramTitle}"
     MinWidth="200"
     MinHeight="100"
     GlowBrush="{DynamicResource AccentColorBrush}"
@@ -18,13 +18,37 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*"    />
+            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
-        <Viewbox
+        <Grid
             Grid.Row="0"
             Grid.Column="0"
+            >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*"    />
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="100" />
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="Chart" FontSize="16" FontWeight="Bold" />
+            <TextBlock Grid.Row="1" Grid.Column="0" Text="Title" />
+            <TextBox   Grid.Row="1" Grid.Column="1" Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}" />
+        </Grid>
+
+        <Viewbox
+            Grid.Row="0"
+            Grid.Column="1"
             Stretch="Uniform"
             StretchDirection="Both"
             >
@@ -37,7 +61,7 @@
 
         <Grid
             Grid.Row="1"
-            Grid.Column="0"
+            Grid.Column="1"
             Grid.ColumnSpan="2"
             Margin="5"
             >
@@ -67,7 +91,7 @@
 
         <Grid
             Grid.Row="0"
-            Grid.Column="1"
+            Grid.Column="2"
             Margin="5"
             >
             <Grid.RowDefinitions>
