--- a/ChartDesigner/Views/MainWindow.xaml
+++ b/ChartDesigner/Views/MainWindow.xaml
@@ -1,6 +1,6 @@
 ﻿<mahapps:MetroWindow
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:xctk="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
@@ -9,7 +9,7 @@
     xmlns:converters="clr-namespace:ChartDesigner.Converters;assembly=ChartDesigner"
     xmlns:chartdesigner="clr-namespace:ChartDesigner;assembly=ChartDesigner"
     mc:Ignorable="d"
-	Title="{Binding ProgramTitle}"
+    Title="{Binding ProgramTitle}"
     MinWidth="200"
     MinHeight="100"
     GlowBrush="{DynamicResource AccentColorBrush}"
@@ -44,6 +44,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*"    />
             </Grid.RowDefinitions>
 
@@ -53,7 +54,6 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock Grid.Row="0" Grid.Column="0" Margin="5" Text="Chart" FontSize="16" FontWeight="Bold" />
-            <Button    Grid.Row="0" Grid.Column="1" Command="{Binding ExportCommand}" Content="Export" />
 
             <TextBlock Grid.Row="1" Grid.Column="0" Margin="5" Text="Title" />
             <TextBox   Grid.Row="1" Grid.Column="1" Margin="5" Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}" />
@@ -68,7 +68,9 @@
             <xctk:ColorPicker Grid.Row="4" Grid.Column="1" Margin="5" SelectedColor="{Binding PlotAreaBackground, Converter={StaticResource DrawingColorToMediaColorConverter}}" />
 
             <TextBlock Grid.Row="5" Grid.Column="0" Margin="5" Text="Series type" />
-            <ComboBox Grid.Row="5" Grid.Column="1" Margin="5" SelectedItem="{Binding SeriesType}" IsReadOnly="True" IsEditable="False" ItemsSource="{x:Static chartdesigner:SeriesType.Items}"/>
+            <ComboBox  Grid.Row="5" Grid.Column="1" Margin="5" SelectedItem="{Binding SeriesType}" IsReadOnly="True" IsEditable="False" ItemsSource="{x:Static chartdesigner:SeriesType.Items}"/>
+
+            <Button    Grid.Row="6" Grid.Column="1" Command="{Binding ExportCommand}" Content="Export" />
         </Grid>
 
         <!-- Chart -->
@@ -77,11 +79,13 @@
             Grid.Column="1"
             Stretch="Uniform"
             StretchDirection="Both"
+            SnapsToDevicePixels="true"
             >
             <oxyplot:PlotView
                 MinHeight="{Binding Height}"
                 MinWidth="{Binding Width}"
                 Model="{Binding PlotModel}"
+                SnapsToDevicePixels="true"
                 />
         </Viewbox>
 
